time div jumps fix

--- a/frontend/src/assets/scss/views/_player.scss
+++ b/frontend/src/assets/scss/views/_player.scss
@@ -30,6 +30,8 @@
         flex-grow: 1;
 
         .player-time {
+            width: rem(50px);
+            text-align: center;
             font-family: Righteous;
         }
     }
